--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
                 "npm": ">=7.0.0"
         },
         "dependencies": {
-                "@google/generative-ai@latest",
+                "@google/generative-ai@latest": "^0.1.0",
                 "@distube/ytdl-core": "^4.13.3",
                 "axios": "^1.4.0",
                 "bcrypt": "^5.0.1",
