--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"npm": ">=7.0.0"
 	},
 	"dependencies": {
-		"@goole/generative-ai": "^0.21.0",
+		"@google/generative-ai": "^0.21.0",
 		"@distube/ytdl-core": "^4.13.3",
 		"axios": "^1.4.0",
 		"bcrypt": "^5.0.1",
