--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 	"dependencies": {
 		"@google/generative-ai": "^0.21.0",
 		"@distube/ytdl-core": "^4.13.3",
-		"axios": "^1.4.0",
+		"axios": "^1.3.4",
 		"bcrypt": "^5.0.1",
-		"canvas": "^2.9.1",
+		"canvas": "^2.11.0",
 		"cheerio": "^1.0.0-rc.12",
 		"child_process": "^1.0.2",
 		"connect-flash": "^0.1.1",
@@ -23,7 +23,7 @@
 		"express-rate-limit": "^6.5.2",
 		"express-session": "^1.17.3",
 		"form-data": "^4.0.0",
-	    "fca-neokex": "^1.3.11",
+	    "fca-neokex": "^latest",
 		"fs-extra": "^11.1.0",
 		"googleapis": "^100.0.0",
 		"gradient-string": "^2.0.2",
@@ -48,7 +48,7 @@
 		"socket.io": "^4.5.1",
 		"sqlite3": "^5.0.5",
 		"tinyurl": "^1.1.7",
-		"totp-generator": "^0.0.13",
+		"totp-generator": "^0.0.14",
 		"websocket-stream": "^5.5.2"
 	},
 	"scripts": {
