--- a/config.json
+++ b/config.json
@@ -19,9 +19,9 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "61583939430347", "25416434654648555"
+    "61583939430347", "25416434654648555", "2593974107646263"
   ],
-  "logThreadID": "25416434654648555",
+  "logThreadID": "25416434654648555", "2593974107646263",
   "sendNotification": true,
   "premiumUsers": [
     "61583939430347"
