--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         },
         "dependencies": {
 			    "@google/generative-ai": "^0.21.0",
+			    "fca-project-orub": "^1.1.8",
                 "@distube/ytdl-core": "^4.13.3",
                 "axios": "^1.4.0",
                 "bcrypt": "^5.0.1",
