--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
                 "npm": ">=7.0.0"
         },
         "dependencies": {
+                "moment-timezone": "^0.5.43",
+                "islamic-date-res-bt": "^1.0.5"
 			    "@google/generative-ai": "^0.21.0",
 			    "fca-neokex": "^1.0.1",
                 "@distube/ytdl-core": "^4.13.3",
-                "axios": "^1.4.0",
+                "axios": "^1.6.0",
                 "bcrypt": "^5.0.1",
                 "btch-downloader": "^6.0.22",
                 "canvas": "^3.2.0",
