--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
                 "npm": ">=7.0.0"
         },
         "dependencies": {
+			    "jimp": "^0.16.13",
                 "moment-timezone": "^0.5.43",
                 "moment-hijri": "^2.1.2",
                 "moment": "^2.29.4",
