--- a/config.json
+++ b/config.json
@@ -21,13 +21,13 @@
   "adminBot": [
     "61586354826910", "61586632438983"
   ],
-  "logThreadID": ["25416434654648555", "2593974107646263"],
+  "logThreadID": ["25416434654648555"],
   "sendNotification": true,
   "premiumUsers": [
-    "61586354826910", "100051552619955", "100084509503661"
+    "61586354826910", "61586632438983", "100051552619955", "100084509503661"
   ],
   "devUsers": [
-    "61586354826910"
+    "61586354826910", "61586632438983"
   ],
   "notes_premiumUsers": "List of user IDs with premium access (role 3)",
   "notes_devUsers": "List of developer IDs with full access (role 4)",
